# genomicsurveillance

./: .flake8  .gitignore  .readthedocs.yml  HISTORY.rst  LICENSE  README.rst  pyproject.toml
.github/workflows/: branch.yaml
docs/: conf.py  index.rst  reference.rst
genomicsurveillance/: __init__.py  config.py  data.py  distributions.py  get_quote.py  gov_uk.py  handler.py  models.py  plot.py  quotes.py  types.py  utils.py
genomicsurveillance/data/: __init__.py  aliases.txt  api.py  geo_data.py  gov_uk.py  meta_data.py  uk.geojson  uk_meta.csv
genomicsurveillance/models/: __init__.py  base.py  clock_reset.py  deterministic.py  legacy.py  models.py  sites.py
genomicsurveillance/plots/: __init__.py  basic.py  england.py
genomicsurveillance/utils/: __init__.py  epiestim.py  helper.py  knots.py  lineages.py
notebooks/: quick_start.ipynb  sandbox.ipynb
notebooks/.ipynb_checkpoints/: sandbox-checkpoint.ipynb
tests/: conftest.py  test_data.py  test_get_quote.py  test_handler.py  test_model.py  test_utils.py  test_utls.py
tests/test_files/: E06000021.csv  E06000022.csv  E06000024.csv  test.pkl
