[tool.poetry]
name = "genomicsurveillance"
packages = [
    { include = "genomicsurveillance" },
]
version = "0.1.0"
description = ""
authors = ["Harald Vohringer <harald.voeh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
numpyro = "^0.5.0"
pandas = "^1.2.3"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"
safety = "^1.10.3"
jupyter = "^1.0.0"
jupyterlab = "^3.0.9"
matplotlib = "^3.3.4"
geopandas = "^0.9.0"
uk-covid19 = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

